Prevent rectangular images from being stretched into a square plugin icons

--- a/assets/css/src/amp-admin.css
+++ b/assets/css/src/amp-admin.css
@@ -1,3 +1,7 @@
+.plugin-icon {
+	object-fit: contain; /* Account for non-square icons being used. */
+}
+
 .extension-card-px-message {
 	text-align: center;
 	padding: 7px 20px;
